[package]
name = "berke-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-files= "0.6.2"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
base64 = "0.21.5"
reqwest = "0.11.22"
actix-multipart = "0.6.1"
image = "0.24"

